--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -7,11 +7,7 @@
   "h h"
   "n c";
 
-  grid-template-rows: 100px, 1fr;
   grid-template-columns: 2fr 10fr;
+  grid-template-rows: 50px 1fr;
   grid-gap: 10px; 
 }
-
-
-
-
